fix info block alignment

--- a/src/components/account/atoms/info-block/info-block.module.scss
+++ b/src/components/account/atoms/info-block/info-block.module.scss
@@ -54,6 +54,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(var(--column-width), 1fr));
     gap: var(--grid-gap);
+    align-items: flex-start;
 
     &.single {
       grid-template-columns: 1fr;
